[tool.poetry]
name = "funckeeper"
version = "0.1.2"
description = "A Python function execution recorder and tracker"
authors = ["'fkl' <18654198191@163.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xiwen-haochi/funckeeper"
keywords = ["python", "function", "tracker", "recorder", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
]
packages = [
    { include = "funckeeper" }
]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
